# dune-elecnoise

./: .gitignore  CMakeLists.txt  README.md
src/: BaseNoiseGenerator.h  CMakeLists.txt  FileIO.cpp  FileIO.h  HarmonicNoiseGenerator.cpp  HarmonicNoiseGenerator.h  NoiseGeneration.cpp  PedestalNoiseGenerator.cpp  PedestalNoiseGenerator.h  PinkNoiseGenerator.cpp  PinkNoiseGenerator.h  TestFNoise.cpp  TestFileIO.cpp  TestHarmonicNoiseGenerator.cpp  TestNoiseGeneration.cpp  VectorNoiseGenerator.cpp  VectorNoiseGenerator.h  fnoise.cpp  fnoise.h  main.C
